# live-bootcamp-project

./: README.md  compose.override.yml  compose.yml  docker.sh
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-32c8e26096ccda85a62cd7868397311bb65a8aceadcc4818d3a0a670bd06856d.json  query-ae7b6d159829a8caca805620c4665d638891392c901cacedc4aa723869a21d9d.json
auth-service/migrations/: 20240612113339_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  mod.rs  password.rs  two_factor.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
macros/src/: lib.rs
terraform/: main.tf
