[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = [ "cookie" ] }
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.202", features = [ "derive"] }
serde_json = "1.0.117"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = "0.18.1"

[dev-dependencies]
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "cookies"] }
